alignment fix

--- a/frontend/src/components/navigation/navigation.css
+++ b/frontend/src/components/navigation/navigation.css
@@ -112,19 +112,22 @@
 .navigation .links .link .icon {
   color: #333;
   margin-right: 1rem;
+  font-size: 1.8rem;
+  margin-top: 0.25rem;
 }
 
 .navigation .user-panel .switcher {
   display: flex;
   gap: 0.5rem;
   place-self: center;
+  width: 100%;
 }
 
 .navigation .user-panel .button {
   padding: 0.5rem 1rem;
   font-size: 1rem;
   transition: all 0.4s ease;
-  width: 7.5rem;
+  width: stretch;
   border-radius: 0.5rem;
 }
 
